traefik/service-local.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-local
  namespace: tsebra-home

spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: web
    - port: 8080
      targetPort: 9000
      protocol: TCP
      name: dashboard
    - port: 443
      targetPort: 8443
      protocol: TCP
      name: websecure
  selector:
    app: traefik
