traefik/service-tailscale.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-tailscale
  namespace: tsebra-home

spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: web
  selector:
    app: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-tailscale
  namespace: tsebra-home
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: dashboard
  selector:
    app: traefik
