traefik/ingress-tailscsale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-web-tailscale
  namespace: tsebra-home
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: traefik-web-tailscale
      port:
        number: 80
  tls:
    - hosts:
        - home
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard-tailscale
  namespace: tsebra-home
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: traefik-dashboard-tailscale
      port:
        number: 80
  tls:
    - hosts:
        - home-traefik-dashboard
