traefik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-web
  namespace: tsebra-home
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: traefik-web
      port:
        number: 80
  tls:
    - hosts:
        - home
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: tsebra-home
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: traefik-dashboard
      port:
        number: 80
  tls:
    - hosts:
        - traefik-dashboard
